--- a/perldoc/ko/perl/5.10/perlthrtut.pod
+++ b/perldoc/ko/perl/5.10/perlthrtut.pod
@@ -249,14 +249,14 @@ presented later on.)
 
 =end original
 
-このモデルはまた、自分自身を呼び出すサブルーチンを持つよりも、別の
-スレッドを生み出すような再起的プログラムの形態に利用しやすいです。
-素数やフィボナッチ数列ジェネレーターは、どちらもこのパイプラインモデルの
-形態にうまく位置付けられます(素数ジェネレーターの例は後で登場します)。
+이 모델은 또, 자기자신을 호출하는 서브루틴을 가지는 것보다도, 
+다른 스레드를 생성해내는 재기적 프로그램의 형태에 이용하기 쉽습니다.
+소수나 피보나치 수열 생성기 모두 이 파이프라인 모델의 형태에 
+맞습니다(소수 생성기의 예제는 나중에 등장합니다).
 
 =head1 What kind of threads are Perl threads?
 
-(Perlスレッドはどんなスレッドか?)
+(Perl 스레드는 어떤 스레드?)
 
 =begin original
 
@@ -271,17 +271,16 @@ disappointed or confused.  Possibly both.
 
 =end original
 
-もしもあなたが他のスレッドの実装を経験したことがあるなら、事態は全く
-あなたの予想とは違うことがわかるでしょう。
-Perl スレッドを扱う時には、あらゆる X に対して
-I<Perl スレッドは X スレッドではない> ということを忘れてはなりません。
-それらは POSIX スレッドではありません。
-DecThread でもなければ Java のグリーンスレッドでないし、
-Win32 スレッドでもありません。
-類似点はあるし、広義の概念は同じです。
-だが実装の詳細を調べだしたら、あなたは失望するか混乱するかの
-どちらかになるでしょう。
-あるいはその両方かもしれません。
+만약 당신이 다른 스레드의 구성을 경험한 적이 있다면, 사태는 당신이 예상한 것과는 
+전혀 다르다는 것을 알 수 있을 겁니다.
+Perl 스레드를 취급할 때에는 모든 X 에 대해서 
+I<Perl 스레드는 X 스레드가 아니다> 라는 것을 잊어서는 안됩니다.
+그것들은 POSIX 스레드가 아닙니다.
+DecThread 도 아니라면 Java 의 그레이스레드도 아니고 
+Win32 스레드도 아닙니다.
+유사점은 있고, 넓은 의미의 개념은 같습니다.
+하지만, 구성의 자세한 내용을 조사해보면, 당신은 실망하거나 혼란할 겁니다.
+혹은 그 양쪽 모두일지도 모르죠.
 
 =begin original
 
@@ -295,14 +294,13 @@ do it.
 
 =end original
 
-これは、これまで登場してきたあらゆるスレッドと Perl スレッドが完全に
-異なるということを言っているのではありません。
-Perl スレッドは他のモデル、特に POSIX スレッドに多くを負っています。
-ですが、Perl が C ではないように、Perl スレッドは POSIX スレッドでは
-ありません。
-だから、もしあなたがミューテックスやスレッドプライオリティを
-期待しているならば、ちょっと立ち戻って、自分が何をしたいのか、
-Perl はいかにしてそれが可能なのかを考える時です。
+이것은 지금까지 등장해온 모든 스레드와 Perl 스레드가 완전히 
+다르다는 것을 말하고 있는 것은 아닙니다.
+Perl 스레드는 다른 모델, 특히 POSIX 스레드에 많은 것을 의지하고 있습니다.
+그렇지만, Perl 이 C 가 아닌 것 처럼, Perl 스레드는 POSIX 스레드가 아닙니다.
+그래서, 만약 당신이 뮤텍스나 스레드 프라이어리티 를 기대하고 있다면,
+조금 돌아와서 자신이 무엇을 하고 싶은가, Perl 은 어떻게 그것이 가능한 가를 
+생각할 때입니다.
 
 =begin original
 
@@ -312,10 +310,10 @@ system blocks the entire process on C<sleep()>, Perl usually will, as well.
 
 =end original
 
-しかし、あなたのオペレーティングシステムのスレッドが許可しない限り、
-Perl スレッドが魔法のように何かを行うことはできないことを覚えておきましょう。
-だからもし、システムが C<sleep()> でプロセスを丸ごとブロックするなら、通常
-Perl も同様にそうするでしょう。
+그러나, 당신의 OS 스레드가 허가하지 않는 한, 
+Perl 스레드가 마법처럼 무엇인가를 수행하는 일은 없을 것이라는 것을 기억해두죠.
+그래서 만약, 시스템이 C<slee()> 로 프로세스를 완전히 블록한다면,
+보통은 Perl 도 마찬가지로 그렇게 될 겁니다.
 
 =begin original
 
@@ -323,11 +321,11 @@ B<Perl Threads Are Different.>
 
 =end original
 
-B<Perl スレッドは別ものです>。
+B<Perl 스레드는 다릅니다>。
 
 =head1 Thread-Safe Modules
 
-(スレッドセーフなモジュール)
+(스레드 세이프한 모듈)
 
 =begin original
 
@@ -341,13 +339,13 @@ in production code.
 
 =end original
 
-スレッドの追加は Perl の内部的な実態を変化させてしまいました。
-これには XS モジュールや外部ライブラリーを書いている人々も含まれます。
-しかしながら、デフォルトではスレッド間で Perl のデータは共有されません。
-そのため Perl モジュールはスレッドセーフであるという機会に恵まれていますし、
-あるいは容易にスレッドセーフにすることができます。
-スレッドセーフの札がついていないモジュールは製品版の前にテストされるか
-コードレビューを受けるべきです。
+스레드의 추가는 Perl 의 내부적인 실태를 변화시켜 버렸습니다.
+이것에는 XS 모듈이나 외부 라이브러리를 쓰고 있는 사람들도 포함됩니다.
+그렇지만, 기본값이 아닌 스레드 사이에서 Perl 의 데이터는 공유되지 않습니다.
+그 때문에 Perl 모듈은 스레드 세이프라는 기회에 마주치게 되고,
+혹은 편하게 스레드 세이프할 수 있습니다.
+스레드 세이프가 되지 않는 모듈은 제품판의 앞에 테스트되었는 가 
+코드리뷰를 받아야 합니다.
 
 =begin original
 
@@ -359,12 +357,10 @@ modules aren't thread-safe.
 
 =end original
 
-あなたが使おうとしているモジュールの全てがスレッドセーフというわけでは
-ないですし、モジュールのドキュメントに安全であると書かれていないならば、
-常に安全ではないものと仮定するべきです。
-このことは、コアの一部として配布されているモジュールにもあてはまります。
-スレッドは比較的新しい機構なので、標準モジュールの中にさえスレッドセーフで
-ないものがあります。
+당신이 사용하려고 하는 모듈의 모든 것이 스레드 세이프한 것은 아니고, 
+모듈의 문서에 오나전하게 쓰여있지 않다면, 항상 안전하지 않은 것이라고 가정해야 됩니다.
+이 것은, 코어의 일부로써 배포되고 있는 모듈에도 맞춰볼 수 있습니다.
+스레드는 비교적 새로운 기능이기때문에 표준 모듈의 안에서만 스레드 세이프하지 않는 것이 있습니다.
 
 =begin original
 
@@ -375,10 +371,10 @@ environment.
 
 =end original
 
-仮にあるモジュールがスレッドセーフであったとしても、そのモジュールが
-うまく働くように最適化されているということを意味するわけではありません。
-できるだけスレッド環境でパフォーマンスが向上するように、スレッド化された
-Perl の新機構を利用するようモジュールを書き直したほうがよいです。
+예를 들어 어느 모듈이 스레드 세이프하다고 해도, 그 모듈이 잘 움직이도록 최적화 
+되어 있다고 하는 것을 의미하는 것은 아닙니다.
+가능한ㅎㄴ 스레드 환경에서 퍼포먼스가 향상되게 스레드화된 Perl 의 새로운 기능을 
+이용하도록 모듈을 다시 쓰는 편이 좋습니다.
 
 =begin original
 
@@ -390,11 +386,11 @@ are covered in L</"Basic semaphores">.
 
 =end original
 
-もしもなんらかの理由でスレッドセーフではないモジュールを使っているならば、
-ただ一つのスレッドからそれを使うことによって防ぐことができます。
-そのようなモジュールにアクセスするマルチスレッドが必要ならば、セマフォや
-アクセスを制御するためのプログラミング原則を用いることができます。
-セマフォは L</"Basic semaphores"> でカバーしています。
+만약 어떤 이유에서 스레드 세이프하지 않은 모듈을 사용하고 있다면,
+단 하나의 스레드에서 그것을 사용하는 것에 의해 막을 수 있습니다.
+그런 모듈에 접근하는 멀티 ㅡㅅ레드가 필요하다면, 세마포어 나 
+접근을 제어하기 위한 프로그래밍 원칙을 사용할 수 있습니다.
+세마포어는 L</"Basic semaphores"> 로 커버하고 있습니다.
 
 =begin original
 
@@ -402,11 +398,11 @@ See also L</"Thread-Safety of System Libraries">.
 
 =end original
 
-L</"Thread-Safety of System Libraries"> も参照してください。
+L</"Thread-Safety of System Libraries"> 도 참조해주세요.
 
 =head1 Thread Basics
 
-(スレッドの基本)
+(스레드의 기본)
 
 =begin original
 
@@ -418,16 +414,16 @@ make threaded programming easier.
 
 =end original
 
-L<threads> モジュールは、あなたがスレッドプログラムを書くのに必要と
-なる基本的な機能を提供します。
-次からのセクションでは、スレッドプログラムを作るのに必要なことを示しながら
-基礎的なところをカバーしていきましょう。
-その後で、スレッドプログラミングを容易にしてくれる L<threads> モジュールの
-機能をみることにします。
+L<threads> 모듈은 당신이 스레드 프로그램을 쓰는 것에 필요로 하는 
+기본적인 기능을 제공합니다.
+다음 섹션부터는 스레드 프로그램을 만드는 것에 필요한 것을 나타내면서 
+기초적인 부분을 커버하겠습니다.
+그 뒤에 스레드 프로그램을 쓰기 쉽게 해주는 L<threads> 모듈의 
+기능을 보도록 하겠습니다.
 
 =head2 Basic Thread Support
 
-(基本的なスレッドのサポート)
+(기본적인 스레드의 지원)
 
 =begin original
 
@@ -438,11 +434,11 @@ support enabled, then any attempt to use threads will fail.
 
 =end original
 
-スレッドのサポートは、あなたのプログラムがコンパイルされる時ではなく、
-Perl のコンパイル時のオプションによります。
-つまり、Perl をビルトするときに、サポートのオン・オフを行います。
-スレッドがサポートされるように Perl がコンパイルされていないなら、スレッドを
-使おうとしても失敗するでしょう。
+스레드의 지원은 당신의 프로그램이 컴파일된 때가 아니라,
+Perl 의 컴파일 시의 옵션에 따라 다릅니다.
+즉, Perl 을 빌드할 때에 스레드 지원을 선택할 수 있습니다.
+스레드가 지원되도록 Perl 이 컴파일 되어 있지 않으면, 스레드를 
+사용하려고 해도 실패할 겁니다.
 
 =begin original
 
@@ -452,9 +448,8 @@ like:
 
 =end original
 
-スレッドが使用可能かどうかをチェックするために Config モジュールを
-利用できます。
-あなたのプログラムがスレッド無しには実行できないなら、次のように記述できます:
+스레드가 사용가능한지 어떤지를 체크하기 위해서는 Config 모듈을 이용할 수 있습니다.
+당신의 프로그램이 스레드없이 실행할 수 없다면, 다음처럼 기술할 수 있습니다:
 
     use Config;
     $Config{useithreads} or die('Recompile Perl with threads to run this program.');
@@ -466,8 +461,8 @@ have code like this:
 
 =end original
 
-スレッドを利用するかもしれないモジュールを使うプログラムには、
-次のようなコードをつけておくとよいでしょう:
+스레드를 이용할지도 모르는 모듈을 사용하는 프로그램에는 
+다음처럼 코드를 붙여 두면 좋겠죠:
 
     use Config;
     use MyMod;
@@ -492,14 +487,14 @@ only imported if we're running on a threaded Perl.
 
 =end original
 
-スレッドの有無に関わらず走るようなコードは通常、非常に繁雑なものになるので、
-スレッド専用のコードはモジュールとして分離しておくのがベストです。
-上の例では、C<MyMod_threaded> がそれで、スレッド可能な Perl 上で走るときだけ
-インポートされます。
+스레드의 유무에 상관없이 움직이는 코드는 보통, 꽤 난잡한 것이 되기에, 
+스레드 전용 코드는 모듈로 분리해두는 것이 좋습니다.
+위의 예제에서는 C<MyMod_threaded> 가 그것으로, 스레드 가능한 Perl 상에서 
+움직일 때에만 임포트 됩니다.
 
 =head2 A Note about the Examples
 
-(例に対する注意)
+(예제에 대한 주의)
 
 =begin original
 
@@ -511,17 +506,17 @@ threads running when the program exits.  You should not be alarmed by this.
 
 =end original
 
-実際の状況では、プログラムが終了する前に全てのスレッドが実行を終えることに
-注意を払わなければなりません。
-簡明さを重視しているのでここで取り上げる例においては、そのような注意を
-払って B<いません>。
-これらの例を I<そのまま> 実行すると、プログラムが終了する際にまだスレッドが
-走っているという理由で常にエラーメッセージが出力されるでしょう。
-この警告は気にしなくて良いです。
+실제 상황에서는 프로그램이 종료하기 전에 모든 스레드가 실행을 끝내는 것에 주의를
+기울이지 않으면 안됩니다.
+간단하고 명료함을 중시하기 때문에 여기에서 다루는 예제에 대해서는 그런 주의 
+기울이고 있지 B<않습니다>.
+이 예제들을 I<그대로> 실행하면, 프로그램이 종료할 때에 아직 스레드가 
+달리고 있는 이유로 항상 에러메시지가 출력될 겁니다.
+이 경고는 신경쓰지 않아도 됩니다.
 
 =head2 Creating Threads
 
-(スレッドの生成)
+(스레드 생성)
 
 =begin original
 
@@ -532,10 +527,10 @@ threads.
 
 =end original
 
-L<threads> モジュールは新たなスレッドを生成するのに必要なツールを提供します。
-他のモジュール同様、それを使いたいと Perl に伝える必要があります;
-C<use threads;> によって基本的なスレッドを生み出すのに必要な全ての部品が
-インポートされます。
+L<threads> 모듈은 새로운 스레드를 생성하기에 필요한 툴을 제공합니다.
+다른 모듈처럼 그것을 사용하고 싶다면 Perl 에 전달할 필요가 있습니다;
+C<use threads;> 에 의해 기본적인 스레드를 생성하는 것에 필요한 
+모든 부품이 임포트됩니다.
 
 =begin original
 
@@ -543,7 +538,7 @@ The simplest, most straightforward way to create a thread is with C<create()>:
 
 =end original
 
-最も単純で直接的なスレッドの生成方法は C<create()> によるものです:
+제일 간단하게 직접적인 스레드를 생성하는 방법은 C<create()>에 의한 것입니다;
 
     use threads;
 
